<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Movies &amp; TV Series</string>
    <string name="title_movie">Movies</string>
    <string name="title_tvShow">TV Show</string>
    <string name="title_setting">Setting</string>
    <string name="movies_title">Movie Title</string>
    <string name="overview">Movie overview</string>
    <string name="detail">Detail</string>
    <string name="tvshow_name">Name</string>
    <string name="backdrop">Backdrop</string>
    <string name="poster">poster</string>
    <string name="progress_text">Please Wait</string>
    <string name="popularity">Popularity:</string>
    <string name="vote_count">Vote</string>
    <string name="vote_average">Rating</string>
    <string name="vote">Vote:</string>
    <string name="rating">Rating:</string>
    <string name="release">Release: </string>
    <string name="failed_data">Failed to load data from API</string>
    <string name="error">Something Error</string>
    <string name="air_date">First air date:</string>
    <string name="change_language">Change Language</string>
    <string name="language_setting">Language</string>
    <string name="favorite">favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_to_favorite">Add To Favorite</string>
    <string name="added_to_favorite">Added to favorite</string>
    <string name="item_already_added">Item already added</string>
    <string name="failed_to_add_data">Failed to add data</string>
    <string name="deleted_from_favorite">Deleted from favorite</string>
    <string name="delete_from_favorite">Delete From Favorite</string>
    <string name="no_data_for_now">No data for now</string>
</resources>
