<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_movie">

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.rizky.submissionthreemoviecatalogue.ui.movie.MovieFragment"
        android:label="@string/title_movie"
        tools:layout="@layout/fragment_movie" />

    <fragment
        android:id="@+id/navigation_tvshow"
        android:name="com.rizky.submissionthreemoviecatalogue.ui.tvshow.TvshowFragment"
        android:label="@string/title_tvShow"
        tools:layout="@layout/fragment_tvshow" />

    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.rizky.submissionthreemoviecatalogue.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
</navigation>