<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_tvshow_favorite"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="8dp"
    android:layout_marginBottom="4dp"
    card_view:cardCornerRadius="4dp">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_tvshow_poster"
            android:layout_width="77dp"
            android:layout_height="93dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/poster"
            android:scaleType="centerCrop"
            tools:src="@color/colorAccent" />
        <TextView
            android:id="@+id/tv_tvshow_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/img_tvshow_poster"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/tvshow_name" />
        <TextView
            android:id="@+id/tv_tvshow_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_tvshow_name"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toEndOf="@id/img_tvshow_poster"
            android:ellipsize="end"
            android:maxLines="1"
            tools:text="@string/overview" />

        <ImageButton
            android:id="@+id/delete_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/tv_tvshow_overview"
            android:backgroundTint="@android:color/transparent"
            android:src="@drawable/ic_delete"
            tools:targetApi="lollipop"
            android:contentDescription="@string/delete_from_favorite" />

    </RelativeLayout>
</androidx.cardview.widget.CardView>